hazelcast, springboot, gradle version bump + python client